--- a/app/views/phase_edition_instances/export.txt.haml
+++ b/app/views/phase_edition_instances/export.txt.haml
@@ -10,7 +10,7 @@ DMP Online (Digital Curation Centre)
 - if @doc[:project_status]
   = t('dmp.project_stage', phase: @phase_edition_instance.edition.phase.phase)
 - if @doc[:template_org]
-  = "#{@phase_edition_instance.template_instance.template.organisation.organisation_type.title}: #{@phase_edition_instance.template_instance.template.organisation.full_name}"
+  = "#{@phase_edition_instance.template_instance.template.organisation.organisation_type.nil? ? nil : @phase_edition_instance.template_instance.template.organisation.organisation_type.title}: #{@phase_edition_instance.template_instance.template.organisation.full_name}"
 - if @doc[:partners]
   = t('dmp.lead_org', org: plan_display(@plan, :lead_org))
   - unless @plan.other_orgs.blank?
