--- a/app/views/admin/repositories/_show.html.haml
+++ b/app/views/admin/repositories/_show.html.haml
@@ -1,3 +1,12 @@
-=panel("These are the Repository details") do
-  %ul
-    %li hello
+.panel
+  %h3= t('repository.title.details')
+  .panel_contents
+    =render 'details', :repository => repository
+.panel
+  %h3= t('repository.title.filetypes')
+  .panel_contents
+    =render 'filetypes', :repository => repository, :filetypes=> filetypes
+.panel
+  %h3= t('repository.title.log')
+  .panel_contents
+    =render  'log', :log => repository.show_log()
