Fixed bug in plans.rb validation/saving; moved sword fields to plan level, export working for all filetypes, added rdf filetype, improved layouts

--- a/app/views/admin/repositories/_details.html.haml
+++ b/app/views/admin/repositories/_details.html.haml
@@ -9,7 +9,7 @@
         %td= link_to(repository.organisation.full_name, :controller => "admin/organisations", :action => "show", :id => repository.organisation)
       %tr
         %th Sword Collection URI
-        %td= link_to(repository.sword_col_uri, repository.sword_col_uri, :target=>"_blank")
+        %td= link_to(repository.sword_collection_uri, repository.sword_collection_uri, :target=>"_blank")
       %tr
         %th Username
         %td= repository.username
