--- a/app/views/admin/repositories/_form.html.haml
+++ b/app/views/admin/repositories/_form.html.haml
@@ -1,22 +1,23 @@
-= semantic_form_for [:admin, @repository] do |f|
+= semantic_form_for [:admin, @repository], :html => {:class => "repository_edit_form"} do |f|
   = f.inputs I18n.t('dmp.admin.details') do
     = f.input :organisation
     = f.input :name
-    = f.input :sword_col_uri
+    = f.input :sword_collection_uri
     = f.input :username
     = f.input :password
     = f.input :administrator_name
     = f.input :administrator_email
     = f.input :create_metadata_with_new_plan, :label => t('repository.label.create_metadata_with_new_plan')
   = f.inputs I18n.t('repository.title.filetypes') do
-    = f.input :deposit_pdf, :label=> I18n.t('repository.filetype.pdf')
-    = f.input :deposit_html, :label=> I18n.t('repository.filetype.html')
-    = f.input :deposit_csv, :label=> I18n.t('repository.filetype.csv')
-    = f.input :deposit_txt, :label=> I18n.t('repository.filetype.txt')
-    = f.input :deposit_xml, :label=> I18n.t('repository.filetype.xml')
-    = f.input :deposit_xlsx, :label=> I18n.t('repository.filetype.xlsx')
-    = f.input :deposit_docx, :label=> I18n.t('repository.filetype.docx')
-    = f.input :deposit_rtf, :label=> I18n.t('repository.filetype.rtf')
+    = f.input :filetype_rdf, :label=> I18n.t('repository.filetype.rdf')
+    = f.input :filetype_pdf, :label=> I18n.t('repository.filetype.pdf')
+    = f.input :filetype_html, :label=> I18n.t('repository.filetype.html')
+    = f.input :filetype_csv, :label=> I18n.t('repository.filetype.csv')
+    = f.input :filetype_txt, :label=> I18n.t('repository.filetype.txt')
+    = f.input :filetype_xml, :label=> I18n.t('repository.filetype.xml')
+    = f.input :filetype_xlsx, :label=> I18n.t('repository.filetype.xlsx')
+    = f.input :filetype_docx, :label=> I18n.t('repository.filetype.docx')
+    = f.input :filetype_rtf, :label=> I18n.t('repository.filetype.rtf')
   = f.buttons do
     = f.action :submit
     = f.action :cancel, :wrapper_html=>{:class=>"cancel"}, :label => "Cancel"
