Fixed bug in plans which caused validation/save errors, other usability enhancements

--- a/app/views/admin/repositories/_show.html.haml
+++ b/app/views/admin/repositories/_show.html.haml
@@ -13,4 +13,4 @@
 .panel
   %h3= t('repository.title.log')
   .panel_contents
-    =render  'log', :queue => RepositoryActionQueue.latest(repository), :full=>true
+    =render  'log', :queue => RepositoryActionQueue.latest_entries_any_phase(repository), :full=>true
