--- a/app/views/phase_edition_instances/output.html.haml
+++ b/app/views/phase_edition_instances/output.html.haml
@@ -1,19 +1,5 @@
 - title t('dmp.output_plan', plan: @plan.project)
 
-.test
-  THIS IS A TEST
-  %ul
-    %li= @phase_edition_instance
-    %li= @phase_edition_instance.id
-    %li= @phase_edition_instance.template_instance.template.name
-  %ul
-    %li= @plan
-    %li= @plan.id
-    %li= @plan.project
-  %ul
-    %li @output_all
-    %li= @output_all
-
 .output
   = form_for @phase_edition_instance, :url => export_plan_layer_path(@plan, @phase_edition_instance), :method => :post do |f|
     = hidden_field_tag "doc[output_all]", @output_all ? "1" : ""
@@ -102,13 +88,17 @@
               %td= select_tag 'format', '<option value="pdf">PDF</option><option value="html">HTML</option><option value="csv">CSV</option><option value="txt">TXT</option><option value="xml">XML</option><option value="xlsx">XLSX</option><option value="docx">DOCX</option><option value="rtf">RTF</option>'.html_safe
             %tr
               %th= t('repository.label.status')
-              %td REPOSITORY STATUS HERE
+              - if @repository
+                %td= @plan.repository_status((@output_all ? nil : @phase_edition_instance))
+              - else
+                %td= t('repository.label.no_repository_record')
             %tr
               %th
               %td
                 = f.submit name: "doc[inline]", value: t('dmp.open')
                 = f.submit name: "doc[attachment]", value: t('dmp.download')
                 - if @repository
+                  = hidden_field_tag "has_deposited_media", @plan.has_deposited_media?((@output_all ? nil : @phase_edition_instance))
                   = f.submit name: "doc[deposit]", value: (t('repository.label.deposit_in') + @repository.name), id: "doc_deposit"
 
     - unless @phase_edition_instance.template_instance.template.constraint_text.blank?
@@ -134,4 +124,4 @@
       .panel
         %h3= t('repository.title.log')
         .panel_contents
-          =render '/admin/repositories/log', :queue => RepositoryActionQueue.latest(@repository, @plan, (@output_all ? nil : @phase_edition_instance)), :full=>false
+          =render '/admin/repositories/log', :queue => RepositoryActionQueue.latest_entries_any_phase(@repository, @plan), :full=>false
