remote old logs, tweak email output

--- a/app/views/repository_notifier/report_queue_error.text.erb
+++ b/app/views/repository_notifier/report_queue_error.text.erb
@@ -1,4 +1,4 @@
-Dear <%= @entry.repository.name%> Administrator,
+Dear <%= @entry.repository.administrator_name%>,
 
 Unfortunately, a terminal error has occurred with the following repository action queue entry:
 
@@ -11,7 +11,7 @@ Action Status: 	<%= @entry.repository_action_status.name %> (<%= @entry.reposito
 Submitting user: 	<%= @entry.user.email %> (<%= @entry.user.id %>)
 Repository Action URI: 	<%= @entry.repository_action_uri %>
 Repository Receipt: 	<%= @entry.repository_action_receipt %>
-Retry Count: 	<%= @entry.retry_count %>
+Retry Count: 	<%= @entry.retry_count + 1 %>
 
 
 Repository Log:
